--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ import data from './data.json';
             <div class="der">
                 <Skills skills={data.skills} />
                 <Contact email={data.email} phone={data.phone} />
-                <Badges/>
+                <Badges badges={data.badges}/>
             </div>
         </div>       
     </main>
